fixed nav height on mobile

--- a/webdev-projects/portfolio/style.scss
+++ b/webdev-projects/portfolio/style.scss
@@ -182,6 +182,7 @@ body {
     h3{ text-align: center;}
     
   }
+  .links{height: 3em;}
   }
 
 
